# opencv

./: AUV1.cpp  AUV2.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  WW IP.docx  cfar  cmake_install.cmake  t_contour  t_image  t_speed
IP_Day1/: 400X400 blue window.cpp  centeredcolorblock.cpp  chessboard.cpp  diagonal.cpp  increasing brightness.cpp  mirror image.cpp
IP_Day2/: Gaussian Filter.cpp  SobelFilter.cpp  apple.cpp  black=white.cpp  enlarging image.cpp  filter(mean).cpp  filter(median).cpp  greyscale2binary.cpp  histogram.cpp  mouse.cpp  rgb2greyscale(mean).cpp  rgb2greyscale.cpp  trackbar(greyscale).cpp  trackbar(rgb).cpp
IP_Day3/: Edges.cpp  Object Detection.cpp  canny(colored).cpp  canny.cpp  centre of mass.cpp  errosion_dilation1.cpp  errosion_dilation2.cpp  errosion_dilation3.cpp  errosion_dilation4.cpp  histogram(rgb).cpp
IP_Day4/: BFS(queue).cpp  DFS(stack).cpp  Hough.cpp  trackbar(error).cpp
IP_Day4/x64/Debug/: vc120.idb
IP_Day4/x64/Debug/ComputerVision.tlog/: CL.read.1.tlog  CL.write.1.tlog  ComputerVision.lastbuildstate  cl.command.1.tlog  (+3 more)
IP_Day5/: Lines.cpp  Object Detection.cpp  VID_binary.cpp  VID_grayscale.cpp  VID_mirror.cpp  VID_waterimage.cpp  contour.cpp  contour_com.cpp  frames.cpp
IP_Day6/: FILL BUCKET.cpp  PS1.cpp  PS2.cpp  lines_vikramshila.cpp
colonizer/: colonizer1.cpp
src/: CFARnKF.cpp  KFtrack.cpp  Smoothing.cpp  Ycrcb.cpp  cfar.cpp  cfarAlgo.cpp  circles.cpp  colonizer1.cpp  fortress.cpp  histogram.cpp  localmax.cpp  segmentation.cpp  send_info.cpp  thermal_contour.cpp  thermal_image.cpp  thermal_speed.cpp  threshold.cpp
